Fix dashboard grid on IE

--- a/mon-pix/app/styles/components/dashboard/_content.scss
+++ b/mon-pix/app/styles/components/dashboard/_content.scss
@@ -5,18 +5,22 @@
 
 .dashboard-content {
   display: grid;
-  grid: "autoplace";
-  grid-template-columns: 1fr;
+  grid-template-columns: 100%;
   padding: 40px 20px;
+  grid-template-areas:
+    'banner'
+    'score'
+    'main'
+    'certif';
 
   &__banner {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: banner;
   }
 
   &__score {
     @include add-dashboard-content-separator();
 
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: score;
     margin-bottom: 20px;
 
     &:first-of-type {
@@ -29,40 +33,51 @@
   }
 
   &__main {
-    grid-area: 3 / 1 / 7 / 2;
+    grid-area: main;
   }
 
   &__certif {
-    grid-area: 7 / 1 / 8 / 2;
+    grid-area: certif;
   }
 
   @include device-is('tablet') {
     grid-template-columns: repeat(6, 1fr);
+    grid-template-areas:
+      'banner banner banner banner banner banner'
+      'score score score certif certif certif'
+      'main main main main main main'
+      'main main main main main main'
+      'main main main main main main';
 
     &__banner {
-      grid-area: 1 / 1 / 2 / 7;
+      grid-area: banner;
     }
 
     &__score {
-      grid-area: 2 / 1 / 3 / 4;
+      grid-area: score;
       height: 100%;
     }
 
     &__certif {
       @include add-dashboard-content-separator();
 
-      grid-area: 2 / 4 / 3 / 7;
+      grid-area: certif;
       margin-bottom: 24px;
       height: 100%;
     }
 
     &__main {
-      grid-area: 3 / 1 / 13 / 7;
+      grid-area: main;
     }
   }
 
   @include device-is('large-screen') {
     grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:
+      'main main main score'
+      'main main main certif'
+      'main main main empty'
+      'main main main empty';
     padding: 0 20px;
 
     &__banner {
@@ -70,11 +85,11 @@
     }
 
     &__main {
-      grid-area: 1 / 1 / 6 / 4;
+      grid-area: main;
     }
 
     &__score {
-      grid-area: 1 / 4 / 2 / 5;
+      grid-area: score;
       border-bottom: none;
       margin: 0;
       padding-top: 40px;
@@ -85,7 +100,7 @@
     }
 
     &__certif {
-      grid-area: 2 / 4 / 3 / 5;
+      grid-area: certif;
       border-bottom: none;
       margin: 0;
     }
